# binny-buddy-ai

./: .pre-commit-config.yaml  Dockerfile  README.md  build.sh  pyproject.toml
app/: main.py
app/models/: __init__.py  asset.py  detection.py  error_response.py  response_models.py
app/services/: asset.py  gemini_service.py
app/utils/: image_utils.py  logger.py
demo/: create_asset.ipynb  detect.ipynb
